tests/issues-OLD/test020.expected
Error: syntax error, near 's', operator expected, tests/issues-OLD/test020.pl:4
