tests/issues-OLD/test020.pl
:-initialization(main).

main :-
	_X = 3s,
	halt.
